CMAPI2-67 repackage classes to separate concerns, and to accurately reflect their purpose